@@ -552,7 +552,7 @@ String WMLSelectElement::ivalue() const
     return parseValueSubstitutingVariableReferences(getAttribute(ivalueAttr));
 }
 
-void WMLSelectElement::listBoxSelectItem(int listIndex, bool allowMultiplySelections, bool shift, bool fireOnChangeNow)
+void WMLSelectElement::listBoxSelectItem(int, bool, bool, bool)
 {
     /* Dummy implementation as listBoxSelectItem is pure virtual in SelectElement class */
 }
